--- a/ai-frontend/public/index.html
+++ b/ai-frontend/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>AI Image to Text Generator</title>
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_MEASUREMENT_ID"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EDJ1S2WVZ"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
