--- a/ai-frontend/public/index.html
+++ b/ai-frontend/public/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-signin-client_id" content=process.env.REACT_APP_GOOGLE_CLIENT_ID>
+    <meta name="google-signin-scope" content="profile email">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="AI Image to Text Generator"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
