Image to Viral Content

--- a/ai-frontend/public/index.html
+++ b/ai-frontend/public/index.html
@@ -9,7 +9,7 @@
     <meta name="google-signin-scope" content="profile email">
     <meta
       name="description"
-      content="AI Image to Text Generator"
+      content="Images to Viral Content"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>AI Image to Text Generator</title>
+    <title>Images to Viral Content</title>
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EDJ1S2WVZ"></script>
     <script>
